# Algorithms.Recipes

cxx/graph_algorithms/: README.md
cxx/graph_algorithms/breadth_first_search/: README.md
cxx/graph_algorithms/breadth_first_search/recipe-01/: README.md  code_13_3.cpp  graph.txt  test.sh
cxx/graph_algorithms/depth_first_search/: README.md
cxx/graph_algorithms/depth_first_search/recipe-01/: README.md  code_13_2.cpp  graph.txt  test.sh
cxx/graph_algorithms/depth_first_search/recipe-02/: README.md  graph.txt  test.sh
cxx/graph_algorithms/depth_first_search/recipe-03/: README.md  bipartite-graph.txt  non-bipartite-graph.txt  test.sh
cxx/list_structures/doubly_linked_list/recipe-01/: README.md  code_8_6.cpp
cxx/list_structures/singly_linked_list/recipe-01/: README.md  code_8_4.cpp
cxx/sorting_algorithms/benchmark/: CMakeLists.txt  benchmark_bubble_sort.cpp  benchmark_insertion_sort.cpp  benchmark_quick_sort.cpp  benchmark_selection_sort.cpp  benchmark_shell_sort.cpp  benchmark_sorting_algorighms.cpp  benchmark_std_sort.cpp  quick_sort.hpp  selection_sort.hpp  test.sh
cxx/sorting_algorithms/bubble_sort/recipe-01/: test_bubble_sort.cpp
cxx/sorting_algorithms/bubble_sort/recipe-02/: bubble_sort.hpp
cxx/sorting_algorithms/insertion_sort/recipe-01/: Makefile  insertion_sort.hpp  test_insertion_sort.cpp
cxx/sorting_algorithms/lib/: CMakeLists.txt
cxx/sorting_algorithms/quick_sort/recipe-02/test/: CMakeLists.txt  quick_sort.hpp  test_median3.cpp
cxx/sorting_algorithms/test/: CMakeLists.txt  bubble_sort.hpp  insertion_sort.hpp  quick_sort.hpp  shell_sort.hpp  test_sorting_algorithms.cpp
python/dynamic_programming/coin_change/: Untitled.ipynb  coin_change.ipynb
python/dynamic_programming/fibonacci/: fibonacci.ipynb
python/dynamic_programming/house_robber/: house_robber.ipynb
python/dynamic_programming/knapsack_problem/: knapsack_problem.ipynb
python/dynamic_programming/longest_increasing_subsequence/: longest_increasing_subsequence.ipynb
python/sorting_algorithms/: README.md
python/sorting_algorithms/bubble_sort/: bubble_sort.ipynb
python/sorting_algorithms/insertion_sort/: insertion_sort.ipynb
python/sorting_algorithms/merge_sort/: merge_sort.ipynb
python/sorting_algorithms/quick_sort/: quick_sort.ipynb
python/sorting_algorithms/selection_sort/: selection_sort.ipynb
python/sorting_algorithms/shell_sort/: shell_sort.ipynb
python/sorting_algorithms/test/: bubble_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  selection_sort.py  shell_sort.py  test_sorting_algorithms.py
(+26 files in other folders)
